Implemented google oauth login functionality

--- a/AspDotNet/appsettings.json
+++ b/AspDotNet/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "29883506450-9s4ofb5jrm9ocdi547k18etk1roaqrjf.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
 
