--- a/AspDotNet/appsettings.json
+++ b/AspDotNet/appsettings.json
@@ -8,12 +8,12 @@
   "AllowedHosts": "*",
   "Authentication": {
     "Google": {
-      "ClientId": "google-client",
-      "ClientSecret": "google-client-secret"
+      "ClientId": "29883506450-9s4ofb5jrm9ocdi547k18etk1roaqrjf.apps.googleusercontent.com",
+      "ClientSecret": "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"
     },
     "Microsoft": {
-      "ClientId": "client id",
-      "ClientSecret": "microsoft-client-secret"
+      "ClientId": "e5c787ca-5591-4e3d-884d-60dc976f8dcf",
+      "ClientSecret": "Ist8Q~zxMxaNY96GVaTfMGkQ3gnE~D3jaO51gadI"
     }
   }
 }
