--- a/AspDotNet/AspDotNet.csproj
+++ b/AspDotNet/AspDotNet.csproj
@@ -14,6 +14,7 @@
     <None Remove="Views\Location\" />
     <None Remove="Views\User\" />
     <None Remove="Views\Image\" />
+    <None Remove="Views\Test\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -21,10 +22,14 @@
     <Folder Include="Views\Location\" />
     <Folder Include="Views\User\" />
     <Folder Include="Views\Image\" />
+    <Folder Include="Views\Test\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Otp.NET" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.0" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
   </ItemGroup>
 </Project>
